--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       font-style: normal;
       font-display: swap;
     }
+
+    body {
+      background-color: #000000;
+      margin: 0;
+    }
   </style>
 </head>
 
